# Sentinel_Lab

./: .coverage  .gitignore  DASHBOARD_SETUP.md  DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  FORWARDING_VERIFICATION.md  GOVERNANCE_OUTREACH.md  LAUNCH_CHECKLIST.md  PHASE1_VERIFICATION_COMPLETE.md  PHASE2_DASHBOARD.md  QUICKSTART.md  README.md  SVA_VERIFICATION.md  TWITTER_THREAD.md  VERIFICATION_RESULTS.md  VERIFICATION_TEST_REPORT.md  check_streamlit_env.py  dashboard.py  dashboard_v2.py  dashboard_v3.py  demo_solana_fee_lab.ipynb  docker-compose.yml  generate_landing_page_rankings.py  pyproject.toml  run_experiment.py  run_lab.py  verification_runner.py
.github/workflows/: deploy-pages.yml
data/: processed_batch.csv  scenario_ddos.csv
docs/: PHASE2_CANONICAL_SCHEMA.md  VERIFICATION_GUIDE.md  VERIFICATION_SUMMARY.md  case_study_solana_fees.md  methodology.md  tokenomics_config.md
examples/: 01_quickstart.py  02_quick_check.py  03_parameter_sweep.py  04_config_workflow.py  README.md
examples_sdk/: 01_basic_scoring.py  02_proposal_analysis.py  03_generate_rankings.py
experiments/: sweep_solana_day_1_20251207_171029.json  sweep_solana_day_1_20251207_210347.json  sweep_solana_day_1_20251207_213135.json
logs/: concentration.csv  liquidity.csv  sim_stats.csv  time_series.csv  top_users.csv  tx_distribution.csv
model/: ledger_model.py
protocols/: aave.yaml  arbitrum.yaml  lido.yaml  optimism.yaml  uniswap.yaml
results/: README.txt
rtl/: ledger_core.sv
sentinel_cloud/: __init__.py  baseline.py  cli.py  client.py  comparison.py  concentration.py  dashboard_io.py  death_clock.py  executive_report.py  experiment.py  governance.py  io.py  mappers.py  proposal.py  protocol_config.py  rankings.py  results.py  role_economics.py  safety.py  schema.py  score.py  stream_cli.py  streaming.py  unit_economics.py
sentinel_cloud/cli/: __init__.py  main.py
sentinel_cloud/config/: __init__.py  (+1 more)
site/: README.md  index.html  rankings.json
tb/: Makefile  test_crv_swarm.py  test_debug_fees.py  test_drain_timing.py  test_edge_cases.py  test_forwarding_hazards.py  test_ledger.py  test_per_tx_verification.py  test_trace_divergence.py
tests/: scenario_generator.py  test_baseline.py  test_comparison.py  test_concentration.py  test_death_clock.py  test_executive_report.py  test_governance.py  test_mappers.py  test_phase1_edge_cases.py  test_role_economics.py  test_safety.py  test_streaming.py  test_streaming_robustness.py  test_unit_economics.py  test_verification_mappers.py
tools/: generate_mainnet_data.py
(+29 files in other folders)
